--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: frontend/careerpilot
+        working-directory: Frontend/careerpilot
 
     steps:
       - name: Checkout repository
